[gd_scene load_steps=21 format=3 uid="uid://7xb1q1u0cfe2"]

[ext_resource type="PackedScene" uid="uid://xt2rvyomnqpt" path="res://prefabs/PROTOTYPE_Door_big_door/broken_handle/broken_handle.tscn" id="2_o8yvv"]
[ext_resource type="PackedScene" uid="uid://dukkhhaw8usla" path="res://prefabs/PROTOTYPE_Door_big_door/big_handle/big_handle.tscn" id="2_v5x0f"]
[ext_resource type="Script" path="res://scripts/animation_trigger.gd" id="3_ic8ev"]
[ext_resource type="Script" path="res://scripts/climbable.gd" id="3_qv4ve"]

[sub_resource type="BoxMesh" id="BoxMesh_bla3m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gkfgy"]
albedo_color = Color(0.77245, 0.533504, 0.335647, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_yuauf"]
bottom_radius = 0.1
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nvplk"]
albedo_color = Color(0.132901, 0.709549, 0.287783, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rfaqh"]
height = 231.0

[sub_resource type="BoxShape3D" id="BoxShape3D_o5oc4"]
size = Vector3(3, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_akxgk"]
size = Vector3(3, 1, 3)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2ow0o"]
height = 231.0
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_go68y"]
albedo_color = Color(0.745881, 0.479889, 0.326446, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_sqvx7"]
size = Vector3(200, 400, 0.2)

[sub_resource type="Animation" id="Animation_gqdrq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door2Origin:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Door1Origin:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4lp0o"]
resource_name = "big_door_still"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door2Origin:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.15869, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Door1Origin:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.13804, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nnfap"]
_data = {
"RESET": SubResource("Animation_gqdrq"),
"big_door_open": SubResource("Animation_4lp0o")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7jq55"]
animation = &"big_door_open"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qh6l4"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_t02bj"]
states/big_door_open/node = SubResource("AnimationNodeAnimation_7jq55")
states/big_door_open/position = Vector2(538, 100)
transitions = ["Start", "big_door_open", SubResource("AnimationNodeStateMachineTransition_qh6l4")]
graph_offset = Vector2(-307, -34)

[node name="BigDoor" type="Node3D" node_paths=PackedStringArray("animation_tree")]
script = ExtResource("3_ic8ev")
animation_tree = NodePath("AnimationTree")
animation = &"big_door_open"

[node name="Door1Origin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -100, 0, 0)

[node name="Door1" type="MeshInstance3D" parent="Door1Origin"]
transform = Transform3D(100, 0, 0, 0, 400, 0, 0, 0, 0.2, 50, 200, 0)
mesh = SubResource("BoxMesh_bla3m")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_gkfgy")

[node name="BrokenHandle" parent="Door1Origin" instance=ExtResource("2_o8yvv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 83.1105, 225.95, 0)

[node name="Vine" type="AnimatableBody3D" parent="Door1Origin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 77.236, 231, 5.184)
script = ExtResource("3_qv4ve")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Door1Origin/Vine"]
transform = Transform3D(1, 0, 0, 0, 231, 0, 0, 0, 1, 0, -115, 0)
mesh = SubResource("CylinderMesh_yuauf")
surface_material_override/0 = SubResource("StandardMaterial3D_nvplk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door1Origin/Vine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -115, 0)
shape = SubResource("CylinderShape3D_rfaqh")

[node name="TopExitArea" type="Area3D" parent="Door1Origin/Vine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.499573, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door1Origin/Vine/TopExitArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00645, 0)
shape = SubResource("BoxShape3D_o5oc4")

[node name="BottomExitArea" type="Area3D" parent="Door1Origin/Vine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -231, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door1Origin/Vine/BottomExitArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.472642, 0)
shape = SubResource("BoxShape3D_akxgk")

[node name="ClimbArea" type="Area3D" parent="Door1Origin/Vine"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door1Origin/Vine/ClimbArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -115, 0)
shape = SubResource("CylinderShape3D_2ow0o")

[node name="TopExitPos" type="Node3D" parent="Door1Origin/Vine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.64922)

[node name="BottomExitPos" type="Node3D" parent="Door1Origin/Vine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -231, 2)

[node name="Door2Origin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 0, 0)

[node name="Door2" type="MeshInstance3D" parent="Door2Origin"]
transform = Transform3D(100, 0, 0, 0, 400, 0, 0, 0, 0.2, -50, 200, 0)
mesh = SubResource("BoxMesh_bla3m")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_go68y")

[node name="BigHandle" parent="Door2Origin" instance=ExtResource("2_v5x0f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -72.7043, 228.471, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 200, 0)
shape = SubResource("BoxShape3D_sqvx7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nnfap")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_t02bj")
anim_player = NodePath("../AnimationPlayer")

[connection signal="on_end" from="Door2Origin/BigHandle" to="." method="trigger"]
